fix layout bootstrap

--- a/templates/store/home.html
+++ b/templates/store/home.html
@@ -6,7 +6,7 @@
 </div>
 <div class="row">
     {% for device in devices %}
-    <div class="col-3 col-xs-1 mb-5 d-flex align-items-stretch">
+    <div class="col-lg-3 col-md-4 col-sm-6 mb-5 d-flex align-items-stretch">
         {% include 'store/_card.html' %}
     </div>
     {% endfor %}
