--- a/templates/base.html
+++ b/templates/base.html
@@ -17,10 +17,13 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
               <a class="navbar-brand" href="{% url 'home' %}">STORE</a>
-                <div>
-                    {% include 'store/_search.html' %}
-                </div>
-                <div class="collapse navbar-collapse" id="mainMenu">
+              <div class="navbar-brand">
+                  {% include 'store/_search.html' %}
+              </div>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>            
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     {% if user.is_authenticated %}
                         <ul class="navbar-nav ml-auto">
                         <li class="nav-item dropdown">
